# FEM

./: .gitignore  CMakeLists.txt  README.md  README.txt
Wolfram/: Linear_3d_degree.nb  Loc_Mass_and_Stiff_of_the_cube.nb  Matrixes_for_cube_elem_3d.nb  Matrixes_for_rect_elem_2d.nb  Matrixes_for_triangle_elem_2d.nb
src/: CMakeLists.txt  Test_solution.vtk  main.cpp
src/CompressedMatrix/: CMakeLists.txt  CompressedM.cpp
src/GridLib/:  Builder1D.cpp  Builder1D.cpp  Builder1D.h  CMakeLists.txt  CubeElem.cpp  CubeElem.h  IFiniteElem.cpp  IFiniteElem.h  LinElem.cpp  LinElem.h  MeshBuilder.cpp  MeshBuilder.h  RecElem.cpp  RectElem.cpp  RectElem.h
src/Math/: CMakeLists.txt  VecLib.cpp  VecLib.h
src/PDE/: CMakeLists.txt  FEM_PDE.cpp  FEM_PDE.h  FemPDE.cpp  FemPDE.h
src/Solvers/: CMakeLists.txt  Preconditioners.cpp  Preconditioners.hpp  Solvers.cpp  Solvers.hpp  VectorOperations.cpp
src/headers/: CMakeLists.txt  CompressedM.h  FemGrid.h  FemPDE.h  IBoundaryElem.h  IFiniteElem.h  Preconditioners.h  Solvers.h
src/lib/: Builder.cpp  Builder.h  CMakeLists.txt  CubeElem.h  FemGrid.cpp  FemGrid.h  FemPDE.cpp  FemPDE.h  IBoundaryElem.h  IFiniteElem.h  RectElem.h
src/lib/headers/: Builder.h  CompressedM.h  FemGrid.h  FemPDE.h  IBoundaryElem.h  IFiniteElem.h  LinElem.h  PointBoundElem.h  Preconditioners.h  SolverParams.h  Solvers.h  VectorOperations.h
src/lib/include/: Builder.h  CompressedM.h  FemGrid.h  FemPDE.h  FiniteElemMeshParser.h  GlobalAssemblers.h  IBoundaryElement.h  IFiniteElem.h  IFiniteElement.h  LinElem.h  LineBoundaryElement.h  LinearLineBoundaryElement.h  LinearLineElement.h  LinearPointBoundaryElement.h  LinearTriangleElement.h  PointBoundElem.h  Preconditioners.h  Solvers.h  TriangleElem.h  VectorOperations.h
src/lib/pde_lib/: BoundaryElements.cpp  Builder.cpp  CompressedM.cpp  FemGrid.cpp  FemPDE.cpp  FiniteElemMeshParser.cpp  GlobalAssemblers.cpp  IBoundaryElem.cpp  IBoundaryElement.cpp  IFiniteElem.cpp  IFiniteElement.cpp  LinElem.cpp  LineBoundaryElement.cpp  LinearLineBoundaryElement.cpp  LinearLineElement.cpp  LinearPointBoundaryElement.cpp  LinearTriangleElement.cpp  PointBoundElem.cpp  Preconditioners.cpp  SolverParams.cpp  Solvers.cpp  TriangleElem.cpp  VectorOperations.cpp
src/lib/tests/: CMakeLists.txt  FiniteElemMesh_tests.cpp  FiniteElements_tests.cpp  GlobalMat_tests.cpp  LocalMat_tests.cpp  MatVec_Math_tests.cpp  MatrixSolvers_tests.cpp  PDE_lib_tests.cpp  PDE_lib_tests.h  Preconditioners_test.cpp  catch-tests.cpp  catch-tests.h  main-tests.cpp  main.cpp
src/pde_lib/: BoundaryElements.cpp  Builder.cpp  CMakeLists.txt  CompressedM.cpp  FemGrid.cpp  FemPDE.cpp  LinElem.cpp  Preconditioners.cpp  Solvers.cpp  VecMath.cpp  VectorOperations.cpp
